[package]
name = "yosemite_wilderness_permits"
version = "0.1.0"
authors = ["Nathan Howell <nathan.d.howell@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
chrono-tz = "0.5.3"
dialoguer = "0.7.1"
futures = "0.3.5"
http = "0.2.1"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["macros"] }
